Try a different approach to caching

--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           path: |
             ~/Library/Caches/ms-playwright
-          key: vivid-cache-playwright
+            **/node_modules/playwright
+          key: vivid-cache-playwright-v1
 
       - name: Install packages
         if: steps.yarn-cache.outputs.cache-hit != 'true'
