--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: Build Vivid
+    name: Build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
