--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -29,6 +29,7 @@ jobs:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             **/node_modules
+            ~/.cache/ms-playwright
           key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
 
       - name: Install packages
@@ -251,6 +252,15 @@ jobs:
             **/node_modules
           key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
 
+      - name: Cache playwright binaries
+        uses: actions/cache@v2
+        id: playwright-cache
+        with:
+          path: |
+            ~/Library/Caches/ms-playwright
+            **/node_modules/playwright
+          key: vivid-cache-playwright-macos
+          
       - name: Install packages
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         env:
@@ -260,6 +270,7 @@ jobs:
         run: yarn install
 
       - name: Install playwright deps
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         env:
           yarn_always_auth: true,
           yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
