--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -39,12 +39,11 @@ jobs:
           - macos-latest
         include:
           - os: ubuntu-20.04
-            browser:
-              - FirefoxHeadless
-              - ChromeHeadless
+            browser: FirefoxHeadless
+          - os: ubuntu-20.04
+            browser: ChromeHeadless
           - os: macos-latest
-            browser:
-              - SafariNative
+            browser: SafariNative
     steps:
       - uses: actions/download-artifact@v2
         with:
