--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"compile:styles": "lerna run build:styles --stream",
 		"compile:typescript": "lerna run build:typescript",
 		"clean:typescript": "tsc -b --clean",
-		"clean:git": "git clean -xdf",
+		"clean:git": "git clean -e .npmrc -dfx",
 		"clean": "yarn clean:typescript && yarn clean:git",
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
