--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -36,7 +36,7 @@ jobs:
         os:
           - ubuntu-20.04
           - macos-latest
-        browsers:
+        browser:
           - SafariNative
           - ChromeHeadless
           - FirefoxHeadless
