--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -1,7 +1,10 @@
-name: Test
+name: Code Integrity
 
-on:
-  push
+on: push
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -29,7 +32,6 @@ jobs:
           path: /tmp/vivid-env.tar.gz
   test:
     needs: build
-    name: Test (${{ matrix.browser }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -61,7 +63,8 @@ jobs:
           github-token: ${{ github.token }}
           path-to-lcov: /coverage/report-lcov/lcov.info
           flag-name: Tested on ${{ matrix.os }}/${{ matrix.browser }}
-  coveralls_finish:
+  report_coveralls_finish:
+    name: Report Tests Finish to Coveralls
     needs: test
     runs-on: ubuntu-20.04
     steps:
