--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -31,8 +31,9 @@ jobs:
           name: workspace
           path: /tmp/vivid-env.tar.gz
   test:
+    if: ${{ false }}
     needs: build
-    name: Test ${{ matrix.browser_name }}
+    name: "Test: ${{ matrix.browser_name }}"
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 10
@@ -75,15 +76,22 @@ jobs:
           path-to-lcov: ./coverage/report-lcov/lcov.info
           flag-name: Tested on ${{ matrix.os }}/${{ matrix.browser }}
 
-# report_coveralls_finish:
-#    name: Report Tests Finish to Coveralls
-#    needs: test
-#    runs-on: ubuntu-20.04
-#    steps:
-#    - uses: coverallsapp/github-action@master
-#      with:
-#        parallel-finished: true
-#        github-token: ${{ github.token }}
+  test-ui:
+    needs: build
+    name: Test Graphics
+    runs-on: macos-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: workspace
+          path: /tmp
+      - run: tar -zxf /tmp/vivid-env.tar.gz
+      - run: yarn playwright install-deps
+      - run: yarn ui-tests
+      - uses: actions/upload-artifact@v2
+        with:
+         name: snapshot
+         path: ./ui-tests/*.png
 
   verify_package_integrity:
     needs: build
