--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -87,7 +87,7 @@ jobs:
           name: workspace
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
-      - run: yarn playwright install-deps
+      - run: yarn add playwright -D -W --force && yarn playwright install-deps
       - run: yarn ui-tests
       - uses: actions/upload-artifact@v2
         with:
