--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -22,7 +22,7 @@ jobs:
       - run: yarn
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          yarn_always_auth: true,
+          yarn_always_auth: true
           yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
@@ -88,6 +88,10 @@ jobs:
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
       - run: yarn add playwright -D -W --force && yarn playwright install-deps
+        env:
+          yarn_always_auth: true
+          yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
+          yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
       - run: yarn ui-tests
       - uses: actions/upload-artifact@v2
         with:
