--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -63,6 +63,9 @@ jobs:
             browser_name: Safari
             report_coverage: false
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - uses: actions/download-artifact@v2
         with:
           name: workspace
@@ -83,6 +86,9 @@ jobs:
     name: Test Components' Graphics
     runs-on: macos-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - uses: actions/download-artifact@v2
         with:
           name: workspace
@@ -104,6 +110,7 @@ jobs:
     name: ${{ matrix.script_name }}
     runs-on: ubuntu-20.04
     strategy:
+      max-parallel: 10
       matrix:
         script:
           - dep-check
@@ -114,6 +121,9 @@ jobs:
           - script: lint
             script_name: Test Lint rules
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - uses: actions/download-artifact@v2
         with:
           name: workspace
