--- a/common/scheme/tsconfig.json
+++ b/common/scheme/tsconfig.json
@@ -8,7 +8,7 @@
     "tsBuildInfoFile": ".tsbuildinfo"
   },
   "include": [
-    "src/*.ts",
+    "src/*.ts"
     "src/partials/_scheme-mixins.css.ts"
   ],
   "exclude": [
