--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -88,7 +88,7 @@ jobs:
           path-to-lcov: ./coverage/report-lcov/lcov.info
           flag-name: Tested on ${{ matrix.os }} / ${{ matrix.browser }}
 
-  test_graphics:
+  test_for_visual_regression:
     needs: build
     name: Test Components' Graphics
     runs-on: macos-latest
