--- a/components/file-picker/package.json
+++ b/components/file-picker/package.json
@@ -19,7 +19,7 @@
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules",
+		"build:styles": "umbrella-style-modules --path=\"./src\"",
 		"build": "yarn run build:styles && yarn run build:typescript"
 	},
 	"bugs": {
