--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -154,16 +154,15 @@ jobs:
           name: workspace
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
-      - name: Build storybook
-        run: yarn storybook:build base-url=${{ github.event.number }}
-      - name: Deploy showcase under PR ID (${{ github.event.number }})
-        run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PRS_BUCKET }}/${{ github.event.number }}
-      - name: Invalidate CloudFront distribution root object's cache
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PRS_DISTRIBUTION }} --paths "/${{ github.event.number }}/*"
+      - run: yarn wca:json
+      - run: node ./.storybook/build-scripts/build-pre.mjs
+      - run: build-storybook -c .storybook -o .out -s ./.storybook/static
+      - run: node ./.storybook/build-scripts/build-post.mjs base-url=${{ github.sha }}
+      - run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PRS_BUCKET }}/${{ github.sha }}
       - if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
         env:
           URL: ${{ github.event.pull_request.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           curl -X POST $URL -H "Content-Type: application/json" -H "Authorization: token $GITHUB_TOKEN" \
-            --data '{ "body": ":rocket:\n\nLatest __successful__ build of the PR deployed [here](https://${{ secrets.TMP_PR_DEPLOYMENT_BASE_URL }}/${{ github.event.number }}/index.html).\n\n:rocket:" }'
+            --data '{ "body": ":rocket: Latest __successful__ build of the PR deployed [here](https://${{ secrets.TMP_PR_DEPLOYMENT_BASE_URL }}/${{ github.sha }}/index.html)" }'
