--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -154,9 +154,9 @@ jobs:
           name: workspace
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
-      - run: yarn wca:json
+      - run: yarn wca analyze components/*/src/*.?s --outFile custom-elements.json
       - run: node ./.storybook/build-scripts/build-pre.mjs
-      - run: build-storybook -c .storybook -o .out -s ./.storybook/static
+      - run: yarn build-storybook -c .storybook -o .out -s ./.storybook/static
       - run: node ./.storybook/build-scripts/build-post.mjs base-url=${{ github.sha }}
       - run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PRS_BUCKET }}/${{ github.sha }}
       - if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
