--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -27,7 +27,10 @@
 	"dependencies": {
     "lit-element": "^2.4.0",
 		"lit-html": "^1.1.1",
-		"@vonage/vwc-media-controller": "2.12.0"
+		"@vonage/vvd-core": "2.12.0",
+		"@vonage/vwc-media-controller": "2.12.0",
+		"@vonage/vwc-icon": "2.12.0",
+		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
 		"@vonage/vvd-umbrella": "2.12.0",
