--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -25,9 +25,12 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@types/kefir": "^3.8.5",
+    "lit-element": "^2.4.0",
+		"lit-html": "^1.1.1",
+		"@vonage/vvd-core": "2.12.0",
 		"@vonage/vwc-media-controller": "2.12.0",
-		"kefir": "^3.8.7"
+		"@vonage/vwc-icon": "2.12.0",
+		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
 		"@vonage/vvd-umbrella": "2.12.0",
