--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -29,6 +29,7 @@
 		"lit-html": "^1.1.1",
 		"@vonage/vvd-core": "2.12.0",
 		"@vonage/vwc-media-controller": "2.12.0",
+		"@vonage/vvd-foundation": "2.12.0",
 		"@vonage/vwc-icon": "2.12.0",
 		"ramda": "^0.27.1"
 	},
