--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           echo registry=https://npm.pkg.github.com/ > .npmrc
           echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
-          cat ./npmrc
+          cat .npmrc
         #  git update-index --skip-worktree .npmrc
         #  yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
         #  npm publish $(node ./scripts/vivid-all-package-generator)
