--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
-
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -50,15 +50,12 @@ jobs:
       - name: Build components
         run: yarn compile
 
-      - name: Publish components
-        run: |
-          echo registry=https://npm.pkg.github.com/ > .npmrc
-          echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
-        # yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
-          yarn lerna publish from-package --registry https://localhost --loglevel verbose
-          npm publish $(node ./scripts/vivid-all-package-generator)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo registry=https://npm.pkg.github.com/ > .npmrc
+      - run: echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
+      - run: yarn lerna publish from-package --registry https://localhost --loglevel verbose
+      #- run: npm publish $(node ./scripts/vivid-all-package-generator)
+
+      # yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
 
       # Notify community
       #- name: Notify slack
