--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -52,7 +52,7 @@ jobs:
 
       - run: echo registry=https://npm.pkg.github.com/ > .npmrc
       - run: echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
-      - run: yarn lerna publish from-package --registry https://localhost --loglevel verbose
+      - run: yarn lerna publish from-package --no-git-reset --registry https://localhost --loglevel verbose
       #- run: npm publish $(node ./scripts/vivid-all-package-generator)
 
       # yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
