--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ubuntu-18.04
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      AWS_SECRET_ACCESS_KEY: 1${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
+      GITHUB_TOKEN: 1${{ secrets.GITHUB_TOKEN }}
+      NPM_TOKEN: 1${{ secrets.NPM_AUTH_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -47,32 +48,33 @@ jobs:
         run: yarn install
 
       # Build and publish
-      - name: Build components
-        run: yarn compile
-
+      - run: yarn compile
       - run: echo registry=https://npm.pkg.github.com/ > .npmrc
       - run: echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
-      - run: yarn lerna publish from-package --no-git-reset --registry https://localhost --loglevel verbose
-      #- run: npm publish $(node ./scripts/vivid-all-package-generator)
+      - run: yarn lerna publish from-package --no-git-reset --registry https://npm.pkg.github.com --loglevel verbose
+      - run: npm publish $(node ./scripts/vivid-all-package-generator)
+      - run: echo registry=https://registry.npmjs.org/ > .npmrc
+      - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} >> .npmrc
+      - run: yarn lerna publish from-package --no-git-reset --registry https://registry.npmjs.org --loglevel verbose
 
       # yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
 
       # Notify community
-      #- name: Notify slack
-      #  run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
+      - name: Notify slack
+        run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
 
       # Build and deploy showcase
-      #- name: Build storybook
-      #  run: yarn storybook:build
+      - name: Build storybook
+        run: yarn storybook:build
 
-      #- name: Create deploy timestamp/version
-      #  run: echo "STORYBOOK_DEPLOY_TIMESTAMP=$(jq -r '.timestamp' ./.storybook/static/build-details.json)" >> $GITHUB_ENV
+      - name: Create deploy timestamp/version
+        run: echo "STORYBOOK_DEPLOY_TIMESTAMP=$(jq -r '.timestamp' ./.storybook/static/build-details.json)" >> $GITHUB_ENV
 
-      #- name: Deploy showcase versioned as ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
-      #  run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PROD_BUCKET }}/${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+      - name: Deploy showcase versioned as ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+        run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PROD_BUCKET }}/${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
 
-      #- name: Update CloudFront distribution root object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
-      #  run: aws cloudfront update-distribution --id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --default-root-object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}/index.html
+      - name: Update CloudFront distribution root object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+        run: aws cloudfront update-distribution --id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --default-root-object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}/index.html
 
-      #- name: Invalidate CloudFront distribution root object's cache
-      #  run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --paths "/"
+      - name: Invalidate CloudFront distribution root object's cache
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --paths "/"
