--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -10,7 +10,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
       AWS_SECRET_ACCESS_KEY: 1${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      NPM_TOKEN: 1${{ secrets.NPM_AUTH_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -60,8 +60,6 @@ jobs:
       - run: yarn lerna publish from-package --no-git-reset --registry https://registry.npmjs.org --loglevel verbose
         continue-on-error: true
       #- run: npm publish $(node ./scripts/vivid-all-package-generator)
-
-      # yarn lerna publish from-package --registry https://npm.pkg.github.com --no-git-tag-version --no-push --yes
 
       # Notify community
       - name: Notify slack
