--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -51,11 +51,12 @@ jobs:
       - run: yarn compile
       - run: echo registry=https://npm.pkg.github.com/ > .npmrc
       - run: echo //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} >> .npmrc
-      - run: yarn lerna publish from-package --no-git-reset --registry https://npm.pkg.github.com --yes --loglevel verbose
+      - run: yarn lerna publish from-package --no-git-reset --registry https://npm.pkg.github.com --yes --no-push --loglevel verbose
       - run: npm publish $(node ./scripts/vivid-all-package-generator)
+      - run: git status
       - run: echo registry=https://registry.npmjs.org/ > .npmrc
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} >> .npmrc
-      - run: yarn lerna publish from-package --no-git-reset --registry https://registry.npmjs.org --yes --loglevel verbose
+      - run: yarn lerna publish from-package --no-git-reset --registry https://registry.npmjs.org --yes --no-push --loglevel verbose
       - run: npm publish $(node ./scripts/vivid-all-package-generator)
 
       # Notify community
