--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -1,7 +1,9 @@
-name: Release Vivid (GitHub)
+name: Release Vivid
 
 on:
-  push
+  push:
+    tags:
+      - v*
 
 jobs:
   build-publish:
@@ -54,7 +56,6 @@ jobs:
       - run: yarn lerna publish from-package --no-git-reset --registry https://npm.pkg.github.com --yes --no-push --loglevel verbose
       - run: npm publish $(node ./scripts/vivid-all-package-generator)
         continue-on-error: true
-      - run: git status
       - run: echo registry=https://registry.npmjs.org/ > .npmrc
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} >> .npmrc
       - run: yarn lerna publish from-package --no-git-reset --registry https://registry.npmjs.org --yes --no-push --loglevel verbose
