chore(workspace): test

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,14 +54,14 @@ jobs:
           - npm
         include:
           - registry: github
-            token: ${{ secret.GITHUB_TOKEN }}
+            token: GITHUB_TOKEN
             host: npm.pkg.github.com
           - registry: npm
-            token: ${{ secret.NPM_AUTH_TOKEN }}
+            token: NPM_AUTH_TOKEN
             host: registry.npmjs.org
     steps:
       - env:
-          NPM_CONFIG_REGISTRY: https://:${{ matrix.token }}@${{ matrix.host }}
+          NPM_CONFIG_REGISTRY: https://:${{ secrets[matrix.token] }}@${{ matrix.host }}
         run: npm info @vonage/vwc-button --verbose
 
 
