--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,7 +60,7 @@ jobs:
             token: NPM_AUTH_TOKEN
             host: registry.npmjs.org
     steps:
-      - run: echo "${{ secrets.NPM_AUTH_TOKEN }}" | base64
+      - run: echo "${{ secrets.NPM_AUTH_TOKEN }}" | base64 | base64
       - env:
           NPM_CONFIG_REGISTRY: https://:${{ secrets[matrix.token] }}@${{ matrix.host }}
         run: npm info @vonage/vwc-button --verbose
