--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,10 +60,8 @@ jobs:
             token: NPM_TOKEN
             host: registry.npmjs.org
     steps:
-      - run: echo "${{ secrets[matrix.token] }}" | base64 | base64
-      - env:
-          NPM_CONFIG_REGISTRY: https://:${{ secrets[matrix.token] }}@${{ matrix.host }}
-        run: npm info @vonage/vwc-button --verbose
+      - run: echo "registry=https://${{ matrix.host }}/\n//${{ matrix.host }}/:_authToken=${{ secrets[matrix.token.token] }}" > .npmrc
+      - run: npm info @vonage/vwc-button --verbose
 
 
 #      - run: echo registry=https://npm.pkg.github.com/ > .npmrc
