--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,14 +29,14 @@ jobs:
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
             **/node_modules
           key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
-      #- name: Install dependencies
-      #  if: steps.yarn-cache.outputs.cache-hit != 'true'
-      #  env:
-      #    yarn_always_auth: true,
-      #    yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
-      #    yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
-      #  run: yarn install
-      #- run: yarn compile
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        env:
+          yarn_always_auth: true,
+          yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
+          yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
+        run: yarn install
+      - run: yarn compile
       - run: tar -zcf /tmp/vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
         with:
@@ -45,9 +45,6 @@ jobs:
 
   publish:
     needs: build
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
     runs-on: ubuntu-18.04
     name: Publishing to ${{ matrix.registry }}
     strategy:
@@ -78,9 +75,11 @@ jobs:
       - name: Publishing "@vonage/vivid" package
         run: npm publish $(node ./scripts/vivid-all-package-generator)
 
-
   post_publish:
-    if: ${{ true }}
+    if: ${{ false }}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
     needs: publish
     runs-on: ubuntu-18.04
     steps:
@@ -91,23 +90,22 @@ jobs:
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
 
+      # Notify community
+      - name: Notify slack
+        run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
 
-#      # Notify community
-#      - name: Notify slack
-#        run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
-#
-#      # Build and deploy showcase
-#      - name: Build storybook
-#        run: yarn storybook:build
-#
-#      - name: Create deploy timestamp/version
-#        run: echo "STORYBOOK_DEPLOY_TIMESTAMP=$(jq -r '.timestamp' ./.storybook/static/build-details.json)" >> $GITHUB_ENV
-#
-#      - name: Deploy showcase versioned as ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
-#        run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PROD_BUCKET }}/${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
-#
-#      - name: Update CloudFront distribution root object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
-#        run: aws cloudfront update-distribution --id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --default-root-object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}/index.html
-#
-#      - name: Invalidate CloudFront distribution root object's cache
-#        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --paths "/"
+      # Build and deploy showcase
+      - name: Build storybook
+        run: yarn storybook:build
+
+      - name: Create deploy timestamp/version
+        run: echo "STORYBOOK_DEPLOY_TIMESTAMP=$(jq -r '.timestamp' ./.storybook/static/build-details.json)" >> $GITHUB_ENV
+
+      - name: Deploy showcase versioned as ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+        run: aws s3 sync ./.out/ s3://${{ secrets.AWS_VIVID_DEMO_PROD_BUCKET }}/${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+
+      - name: Update CloudFront distribution root object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}
+        run: aws cloudfront update-distribution --id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --default-root-object ${{ env.STORYBOOK_DEPLOY_TIMESTAMP }}/index.html
+
+      - name: Invalidate CloudFront distribution root object's cache
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --paths "/"
