--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,21 +16,21 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Install yarn
-        run: npm install -g yarn
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-      - name: Cache yarn dependencies
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            **/node_modules
-          key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
+      #- name: Install yarn
+      #  run: npm install -g yarn
+      #- name: Get yarn cache directory path
+      #  id: yarn-cache-dir-path
+      #  run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      #- name: Cache yarn dependencies
+      #  uses: actions/cache@v2
+      #  id: yarn-cache
+      #  with:
+      #    path: |
+      #      ${{ steps.yarn-cache-dir-path.outputs.dir }}
+      #      **/node_modules
+      #    key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
       - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+      #  if: steps.yarn-cache.outputs.cache-hit != 'true'
         env:
           yarn_always_auth: true,
           yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
